<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartBeat">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/hbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_heartbeat"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hbTitle">

        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/gaugetimer"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:gaugeEndValue="00"
            app:gaugePointEndColor="@color/Red"
            app:gaugePointStartColor="@color/Red"
            app:gaugeStartAngle="-90"
            app:gaugeStartValue="60"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeColor="@color/Grey"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="360" />

        <TextView
            android:id="@+id/hbTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickTimer"
            android:text="@string/count60"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:text="60" />
    </RelativeLayout>


    <TextView
        android:id="@+id/instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:text="@string/hb_inst"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hbTitle" />

    <TextView
        android:id="@+id/instHB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hbTV"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/instruction"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

    <EditText
        android:id="@+id/num_hb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/instruction"
        app:layout_constraintStart_toEndOf="@+id/instHB"
        app:layout_constraintTop_toBottomOf="@+id/instruction"
        android:autofillHints="120" />

    <TextView
        android:id="@+id/instAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ageTV"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/instHB"
        app:layout_constraintTop_toBottomOf="@+id/instHB" />

    <EditText
        android:id="@+id/num_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="30"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/num_hb"
        app:layout_constraintStart_toStartOf="@+id/num_hb"
        app:layout_constraintTop_toBottomOf="@+id/num_hb" />

    <Button
        android:id="@+id/hb_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="checkHB"
        android:text="@string/submit_HB"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_age" />

    <TextView
        android:id="@+id/hbrReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hb_Submit"
        tools:text="Report" />

    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/draw_menu"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>